fix: text editor not visible in dark mode (#2920)

--- a/src/components/LayerUI.scss
+++ b/src/components/LayerUI.scss
@@ -38,6 +38,8 @@
   }
 
   .layer-ui__wrapper {
+    z-index: var(--zIndex-layerUI);
+
     .encrypted-icon {
       position: relative;
       margin-inline-start: 15px;
